--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "choiminwoo",
+  "name": "https://sunkist18.github.io/choiminwoo",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
@@ -15,7 +16,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build && cp CNAME ./build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
