--- a/package.json
+++ b/package.json
@@ -4,23 +4,21 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.2",
+    "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
-    "jquery": "^3.6.0",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
-    "react-app": "^1.1.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "dev": "webpack-dev-server --hot",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build && cp CNAME ./build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build && sleep 45 && echo Done"
   },
   "eslintConfig": {
     "extends": [
@@ -39,8 +37,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^3.2.3"
   }
 }
